@@ -1,0 +1,62 @@
+version(1);
+
+project_name = "Quark Lib";
+
+patterns = {
+	"*.c",
+	"*.cpp",
+	"*.ds",
+	"*.h",
+	"*.bat",
+	"*.sh",
+	"*.4coder",
+};
+
+blacklist_patterns = {
+	".*",
+};
+
+load_paths = {
+	{
+		{ .path = ".", .recursive = true, .relative = true }, .os = "win"
+	},
+};
+
+command_list = {
+	{
+		.name = "build",
+		.out = "*compilation*",
+		.footer_panel = true,
+		.save_dirty_files = true,
+		.cursor_at_end = false,
+		.cmd = {
+			{ "..\misc\build.bat", .os = "win" },
+		},
+	},
+	
+	{
+		.name = "run",
+		.out = "*compilation*",
+		.footer_panel = true,
+		.save_dirty_files = true,
+		.cursor_at_end = false,
+		.cmd = {
+			{ "..\misc\run.bat", .os = "win" },
+		},
+	},
+
+	{
+		.name = "todo",
+		.out = "*compilation*",
+		.footer_panel = true,
+		.save_dirty_files = true,
+		.cursor_at_end = false,
+		.cmd = {
+			{ "..\misc\todo.bat", .os = "win" },
+		},
+	},
+};
+
+fkey_command[1] = "run";
+fkey_command[5] = "build";
+fkey_command[9] = "todo";
