@@ -1,0 +1,12 @@
+//NOTE: DO NOT SHIP WITH QUARK
+
+#include "quark.h"
+#include <stdio.h> 
+
+int main()
+{
+    printf("%d", get_absolute_value_int();
+           scanf(".");
+           return 0;
+}
+
